[package]
name = "doggo"
version = "0.1.0"
authors = ["Alistair A. Israel <aisrael@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
clap = "3.0.0-beta.1"
reqwest = { version = "0.10.7", features = ["blocking", "json", "rustls-tls"] }
serde_json = "1.0"
